src/objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>Opportunity</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Needs Analysis</fullName>
        </values>
        <values>
            <fullName>Negotiation</fullName>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
        <values>
            <fullName>Proposal</fullName>
        </values>
        <values>
            <fullName>Qualification</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Budget_Confirmed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Budget Confirmed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Current_Year_Margin_Revenue__c</fullName>
        <formula>OM_Current_Year_Revenue__c * OM_Margin_Percentage__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Year Margin $s</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DB_Competitor__c</fullName>
        <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package. If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and can delete this field.</description>
        <label>DB Competitor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Competitor A</fullName>
                </value>
                <value>
                    <fullName>Competitor B</fullName>
                </value>
                <value>
                    <fullName>Competitor C</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Discovery_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Discovery Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Loss_Reason__c</fullName>
        <label>Loss Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>StageName</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Lost to Competitor</fullName>
                </value>
                <value>
                    <fullName>No Budget / Lost Funding</fullName>
                </value>
                <value>
                    <fullName>No Decision / Non-Responsive</fullName>
                </value>
                <value>
                    <fullName>Price</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OM_Account_Number__c</fullName>
        <formula>Account.AccountNumber</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OM_Annual_Forecast_Margin__c</fullName>
        <label>Annual Forecast Margin</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>OM_Annual_Forecast_Revenue__c</fullName>
        <label>Annual Forecast Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OM_Annual_Margin_Revenue__c</fullName>
        <formula>Amount  *  OM_Margin_Percentage__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Annual Margin Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OM_Anticipated_RFP_Date__c</fullName>
        <label>Anticipated RFP Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>OM_Contribution_Margin__c</fullName>
        <label>Contribution Margin</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OM_Current_Contract_Expiration__c</fullName>
        <label>Current Contract Expiration</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OM_Current_Distributor__c</fullName>
        <label>Current Distributor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OM_Current_Year_Revenue__c</fullName>
        <formula>IF( ISPICKVAL( StageName , &apos;Closed Lost&apos;) , 0, (Amount / 12) * (13 - MONTH( OM_Revenue_Start_Date__c )))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Autocalculated based on annual revenue and revenue start date</inlineHelpText>
        <label>Current Year Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OM_DC__c</fullName>
        <formula>Account.OM_Primary_DC__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DC</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OM_Delivery_Method__c</fullName>
        <label>Delivery Method</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Low Unit</fullName>
                </value>
                <value>
                    <fullName>Bulk</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OM_Formal_Proposal_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Formal Proposal Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OM_GPO__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GPO</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>OM_Buying_Contracting_Groups__c.OM_Group_Type__c</field>
                <operation>equals</operation>
                <value>GPO</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>OM_Buying_Contracting_Groups__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OM_Gross_Margin__c</fullName>
        <label>Gross Margin</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OM_Hazardous_Materials__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hazardous Materials</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OM_Hold_Reason__c</fullName>
        <label>Hold Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OM_Implementation_Start_Date__c</fullName>
        <label>Implementation Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OM_Managers_Email__c</fullName>
        <label>Manager&apos;s Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>OM_Margin_Percentage__c</fullName>
        <inlineHelpText>Enter the margin percent for this opportunity it is not a Medichoice or CPS opportunity (it will calculate automatically for those based on product level margin %)</inlineHelpText>
        <label>Margin Percentage</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>OM_Onsite_Assessment_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Onsite Assessment Required?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OM_Opportunity_Power_of_One__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Power of One</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OM_Other_Purchasing_Affiliations__c</fullName>
        <label>Other Purchasing Affiliations</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OM_Parent_IDN_Account__c</fullName>
        <label>Parent/IDN Account</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OM_Product_Margin_Revenue__c</fullName>
        <label>Product Margin Revenue</label>
        <summarizedField>OpportunityLineItem.OM_Product_Margin_Revenue__c</summarizedField>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>OM_Proposed_Services__c</fullName>
        <label>Proposed Services</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PANDAC</fullName>
                </value>
                <value>
                    <fullName>Qsight</fullName>
                </value>
                <value>
                    <fullName>IPM</fullName>
                </value>
                <value>
                    <fullName>Kanban</fullName>
                </value>
                <value>
                    <fullName>RFID</fullName>
                </value>
                <value>
                    <fullName>Inventory Valuation</fullName>
                </value>
                <value>
                    <fullName>SurgiTrack</fullName>
                </value>
                <value>
                    <fullName>LUM</fullName>
                </value>
                <value>
                    <fullName>Preferred Access</fullName>
                </value>
                <value>
                    <fullName>Expanded Access</fullName>
                </value>
                <value>
                    <fullName>Outsourcing</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OM_Purchase_Levels__c</fullName>
        <label>Purchase Levels</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>OM_Purchase_Levels</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>OM_RFP_Due_Date__c</fullName>
        <label>RFP Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OM_Revenue_Start_Date__c</fullName>
        <inlineHelpText>Please enter the first invoice date for this opportunity.</inlineHelpText>
        <label>Revenue Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OM_Sales_Type__c</fullName>
        <label>Sales Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New Sale</fullName>
                </value>
                <value>
                    <fullName>Expanded Access Sale</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Count__c</fullName>
        <label>Product Count</label>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Strategic Value Partnership</fullName>
                </value>
                <value>
                    <fullName>MediChoice</fullName>
                </value>
                <value>
                    <fullName>Medical Action/AVID</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ROI_Analysis_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ROI Analysis Completed</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>AllOpportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.PROBABILITY</columns>
        <columns>OPPORTUNITY.TYPE</columns>
        <columns>OPPORTUNITY.LEAD_SOURCE</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Opportunities</label>
    </listViews>
    <listViews>
        <fullName>ClosingNextMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>NEXT_MONTH</value>
        </filters>
        <label>Closing Next Month</label>
    </listViews>
    <listViews>
        <fullName>ClosingThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Closing This Month</label>
    </listViews>
    <listViews>
        <fullName>Default_Opportunity_Pipeline</fullName>
        <booleanFilter>(1 OR 2)</booleanFilter>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>LAST_N_DAYS:30</value>
        </filters>
        <label>Opportunity Pipeline</label>
    </listViews>
    <listViews>
        <fullName>MyOpportunities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Opportunities</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>Won</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.WON</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Won</label>
    </listViews>
    <recordTypes>
        <fullName>OM_CPS</fullName>
        <active>true</active>
        <businessProcess>Opportunity</businessProcess>
        <label>CPS</label>
    </recordTypes>
    <recordTypes>
        <fullName>OM_Core_Distribution</fullName>
        <active>true</active>
        <businessProcess>Opportunity</businessProcess>
        <label>Core Distribution</label>
    </recordTypes>
    <recordTypes>
        <fullName>OM_Manufacturer_Services</fullName>
        <active>true</active>
        <businessProcess>Opportunity</businessProcess>
        <label>Manufacturer Services</label>
    </recordTypes>
    <recordTypes>
        <fullName>OM_Medichoice_Housebrand</fullName>
        <active>true</active>
        <businessProcess>Opportunity</businessProcess>
        <label>MediChoice/House Brand</label>
    </recordTypes>
    <recordTypes>
        <fullName>OM_Strategic_Logistics_Center</fullName>
        <active>true</active>
        <businessProcess>Opportunity</businessProcess>
        <label>Strategic Logistics Center (SLC)</label>
    </recordTypes>
    <recordTypes>
        <fullName>OM_Supply_Chain_Services</fullName>
        <active>true</active>
        <businessProcess>Opportunity</businessProcess>
        <label>Supply Chain Services</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Close_Oppty_for_Prospect</fullName>
        <active>true</active>
        <description>Prevents users from moving opportunities to Closed Won status for prospect accounts.</description>
        <errorConditionFormula>AND( ISPICKVAL( StageName , &apos;Closed Won&apos;) , Account.RecordType.DeveloperName  = &apos;Prospect&apos;)</errorConditionFormula>
        <errorMessage>You cannot close Opportunities that have been awarded against Prospect Accounts. Please contact the CMF team to create an Account in MDM.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>OpportunityReqFieldsforProbability</fullName>
        <active>false</active>
        <errorConditionFormula>AND((Probability&gt;0.30),(RecordType.DeveloperName =&quot;OM_RFP&quot;	),ISBLANK(OM_Delivery_Method__c),
ISBLANK( OM_Proposed_Services__c ),
ISBLANK(  Product__c ))</errorConditionFormula>
        <errorMessage>Following Fields should have a value for Probability Greater than 30%-
Delivery Method,
Proposed Services,
Product</errorMessage>
    </validationRules>
</CustomObject>